--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,15 +1,8 @@
-[package]
-name = "sighashdb"
-version = "0.1.3"
-edition = "2021"
-authors = ["Tulip Protocol"]
-description = "sighashdb is a collection of anchor instruction sighashes commonly seen acrossa variety of anchor based programs"
-keywords = ["solana", "anchor-lang"]
-license = "MIT/Apache-2.0"
-readme = "./README.md"
-[dev-dependencies]
-data-encoding = "2.3.2"
-ring = "0.16.20"
+[workspace]
+members = [
+    "cli",
+    "db"
+]
 [profile.release]
 lto = "fat"
 codegen-units = 1
