--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -1,10 +1,12 @@
 [package]
 name = "sighashdb-cli"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 clap = "2.33.3"
-sighashdb = {path = "../db", version = "0.1.5"} 
+sighashdb = {path = "../db", version = "0.1.5"}
+data-encoding = "2.3.2"
+ring = "0.16.20"
