--- a/db/Cargo.toml
+++ b/db/Cargo.toml
@@ -1,11 +1,14 @@
 [package]
 name = "sighashdb"
-version = "0.1.5"
+version = "0.1.6"
 edition = "2021"
 authors = ["Tulip Protocol"]
 description = "sighashdb is a collection of anchor instruction sighashes commonly seen acrossa variety of anchor based programs"
 keywords = ["solana", "anchor-lang"]
 license = "MIT/Apache-2.0"
+[features]
+reverse-get = []
+default = ["reverse-get"]
 [dependencies]
 hex = "0.4.3"
 [dev-dependencies]
