--- a/db/Cargo.toml
+++ b/db/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "sighashdb"
-version = "0.1.21"
+version = "0.1.22"
 edition = "2021"
 authors = ["Tulip Protocol"]
 description = "sighashdb is a collection of anchor instruction sighashes commonly seen acrossa variety of anchor based programs"
@@ -18,6 +18,7 @@ data-encoding = "2.3.2"
 ring = "0.16.20"
 [profile.release]
 lto = "fat"
+opt-level = 3
 codegen-units = 1
 panic = "abort"
 [profile.release.build-override]
