--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
 name = "sighashdb-cli"
-version = "0.1.1"
+version = "0.1.2"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 clap = "2.33.3"
-sighashdb = {path = "../db", version = "0.1.5"}
+sighashdb = {path = "../db", version = "0.1.27", features = ["hex"]}
 data-encoding = "2.3.2"
 ring = "0.16.20"
