--- a/db/Cargo.toml
+++ b/db/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "sighashdb"
-version = "0.1.26"
+version = "0.1.27"
 edition = "2021"
 authors = ["Tulip Protocol"]
 description = "sighashdb is a collection of anchor instruction sighashes commonly seen acrossa variety of anchor based programs"
@@ -13,16 +13,7 @@ tulipv2 = []
 atrix-farm = []
 default = ["reverse-get", "tulipv1-leverage-farm", "tulipv2"]
 [dependencies]
-hex = "0.4.3"
+hex = {version = "0.4.3", optional = true}
 [dev-dependencies]
 data-encoding = "2.3.2"
 ring = "0.16.20"
-[profile.release]
-lto = "fat"
-opt-level = 3
-codegen-units = 1
-panic = "abort"
-[profile.release.build-override]
-opt-level = 3
-incremental = false
-codegen-units = 1 
