--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -3,7 +3,7 @@ name = "sighashdb-cli"
 version = "0.1.2"
 edition = "2021"
 description = "cli tool for computing anchor instruction sighashes"
-license = "Apache / MIT"
+license = "MIT/Apache-2.0"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
